Removed GET /profiles method. Moved profile data for current user to user object GET /users/me returns it
