# docs/swagger.yaml
@@ -25,6 +25,20 @@ paths:
           description: redurect_url is missing or not allowed, or user creation error
       tags:
         - Users
+  /users/me:
+    get:
+      summary: Current user with profile
+      responses:
+        200:
+          description: OK
+          schema:
+            $ref: '#/definitions/User'
+        default:
+          description: Unxpected error
+          schema:
+            $ref: '#/definitions/ErrorsContainer'
+      tags:
+        - Users
   /oauth/token:
     post:
       summary: Authenticates user
@@ -1173,19 +1187,6 @@ paths:
       tags:
         - User groups
   /profiles:
-    get:
-      summary: Profile of current user
-      responses:
-        200:
-          description: OK
-          schema:
-            $ref: '#/definitions/Profile'
-        default:
-          description: Unxpected error
-          schema:
-            $ref: '#/definitions/ErrorsContainer'
-      tags:
-        - Profiles
     post:
       summary: Creates user profile
       parameters:
@@ -1318,6 +1319,10 @@ definitions:
     properties:
       id:
         type: integer
+      email:
+        type: string
+      profile:
+        $ref: '#/definitions/Profile'
   Calendar:
     type: object
     properties:
